# embedded-event

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
inc/: embedded-event-barrier.h  embedded-event-link.h  embedded-event-mutex.h  embedded-event-registration.h  embedded-event.h  embedded_event_callback.h  embedded_event_registration.h
src/: embedded-container.cpp  embedded-event-barrier.cpp  embedded-event-link.cpp  embedded-event-mutex.cpp  embedded-event-registration.cpp  embedded-event-task.cpp  embedded-event.cpp  embedded_event.c  embedded_event_callback.c  embedded_event_registration.c  wrapper.cpp
test/: CMakeLists.txt  callback.c  registration.c  test.h  unit_test.c  unit_test.cpp
